--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,35 @@ header {
   color: #e65454;
 }
 
+/* Estilos responsivos para Menu Toggle e Nav */
+@media (max-width: 768px) {
+  .menu-toggle {
+    display: flex;
+    position: absolute;
+    top: 5px;
+    left: 20px;
+  }
+
+  .nav {
+    display: none;
+  }
+  .nav.active {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.9);
+  }
+  .nav ul {
+    flex-direction: column;
+  }
+  .nav ul li {
+    margin: 10px 0;
+  }
+}
+
 /* Estilos do Container de Vídeo */
 .video-container {
   position: relative;
@@ -102,14 +131,14 @@ header {
 }
 
 .video-overlay h1 {
-  color: #272626b9;
+  color: #ffffff;
   font-size: 1.5rem; /* Ajustar o tamanho da fonte conforme necessário */
   margin-bottom: 10px;
   text-align: left; /* Alinhar texto à esquerda */
 }
 
 .video-overlay p {
-  color: #272626b9;
+  color: #f7f7f7f6;
   font-size: 1rem;
   margin-bottom: 20px;
 }
@@ -119,7 +148,9 @@ header {
   padding: 10px 20px;
   font-size: 1.2rem;
   background-color: #ffcc00;
-  color: #fff;
+  color: #000;
+  font-weight: bold;
+  text-decoration: none; /* Remove o sublinhado */
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -137,20 +168,27 @@ header {
   padding: 50px;
 }
 
+/* Seção "Home" */
 section#home {
   padding: 50px 0; /* Espaçamento vertical */
   background-color: #000; /* Fundo escuro */
   color: #f5f5f5; /* Texto claro */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+/* Estilos de Conteúdo */
 .content {
   display: flex; /* Usar Flexbox para layout lado a lado */
   align-items: center; /* Alinhar itens verticalmente no centro */
   justify-content: space-between; /* Espaçar itens uniformemente */
   width: 80%; /* Garantir que o contêiner ocupe 80% da largura */
   margin: 0 auto; /* Centralizar o contêiner */
+  flex-wrap: wrap; /* Permitir que itens quebrem para a próxima linha se necessário */
 }
 
+/* Estilos do Carrossel */
 .carousel {
   position: relative;
   width: 100%;
@@ -175,9 +213,11 @@ section#home {
   opacity: 1; /* Tornar a imagem visível */
 }
 
+/* Estilos do Texto */
 .text-content {
   flex: 1; /* Fazer o texto ocupar 1 unidade de espaço flexível */
   padding: 20px; /* Adicionar espaçamento interno */
+  text-align: center; /* Centralizar o texto */
 }
 
 .text-content h1 {
@@ -190,6 +230,7 @@ section#home {
   margin-bottom: 20px; /* Espaço inferior do parágrafo */
 }
 
+/* Estilos da Imagem */
 .image-container {
   flex: 0 0 200px; /* Imagem ocupa 200px de largura fixa */
   margin-right: 20px; /* Espaçamento direito da imagem */
@@ -202,6 +243,7 @@ section#home {
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
 }
 
+/* Estilos do Botão */
 .cta-btn2 {
   display: inline-block;
   padding: 12px 30px;
@@ -217,6 +259,14 @@ section#home {
 .cta-btn2:hover {
   transform: scale(1.1);
   box-shadow: 0 6px 15px rgba(255, 204, 0, 0.6);
+}
+
+/* Centralizar o contêiner do botão */
+.cta-btn2-container {
+  display: flex;
+  justify-content: center; /* Centralizar horizontalmente */
+  width: 100%; /* Garantir que o contêiner ocupe toda a largura */
+  margin-top: 20px; /* Adicionar margem superior para espaçamento */
 }
 
 /* Media Queries para Responsividade */
@@ -243,15 +293,24 @@ section#home {
     align-items: center; /* Centralizar itens no eixo vertical */
   }
 
-  .carousel img {
-    width: 100%; /* Ajustar a largura da imagem para 100% */
-    height: 200px; /* Ajustar a altura da imagem */
+  .image-container {
+    order: 2; /* Definir a ordem das imagens */
   }
 
   .text-content {
+    order: 1; /* Definir a ordem do texto */
     width: 100%; /* Ajustar a largura do texto */
     padding: 10px; /* Reduzir padding em telas menores */
     text-align: center; /* Centralizar texto */
+  }
+
+  .carousel {
+    order: 3; /* Certificar que o carrossel fica depois do texto */
+  }
+
+  .carousel img {
+    width: 100%; /* Ajustar a largura da imagem para 100% */
+    height: 200px; /* Ajustar a altura da imagem */
   }
 
   .text-content h1 {
@@ -260,6 +319,71 @@ section#home {
 
   .text-content p {
     font-size: 1em; /* Reduzir tamanho da fonte do parágrafo */
+  }
+
+  .cta-btn2-container {
+    order: 4; /* Definir a ordem do contêiner do botão */
+    width: 100%; /* Largura total */
+    display: flex; /* Usar Flexbox */
+    justify-content: center; /* Centralizar botão */
+    margin-top: 20px; /* Adicionar margem superior para espaçamento */
+  }
+
+  .cta-btn2 {
+    width: auto; /* Ajustar a largura do botão */
+  }
+}
+
+section#obras {
+  padding: 50px 0; /* Espaçamento vertical */
+  background-color: #000; /* Fundo escuro elegante */
+  color: #fff; /* Texto branco */
+  text-align: center; /* Centralizar texto */
+}
+
+.fobras {
+  width: 100%; /* Garantir que o contêiner ocupe toda a largura */
+  margin: 0 auto; /* Centralizar o contêiner */
+  padding: 0; /* Remover padding */
+}
+
+.fobras .image-container {
+  display: flex; /* Usar Flexbox */
+  justify-content: space-between; /* Espaçar imagens uniformemente */
+  padding: 0; /* Remover padding nas laterais */
+  box-sizing: border-box; /* Garantir que o padding não quebre o layout */
+  gap: 5px;
+}
+
+.fobras .static-image {
+  width: calc(
+    50% - 5px
+  ); /* Garantir que a imagem ocupe 50% da largura com gap de 10px (dividido) */
+  height: auto; /* Manter a proporção da imagem */
+  object-fit: cover; /* Garantir que as imagens se ajustem corretamente */
+  margin-bottom: 10px; /* Espaço inferior entre as imagens */
+  border-radius: 8px; /* Bordas arredondadas */
+  transition: transform 0.3s ease-in-out; /* Transição suave */
+}
+
+/* Sombra e Transformação ao Hover */
+.fobras .static-image:hover {
+  transform: scale(
+    1.05
+  ); /* Aumentar levemente o tamanho da imagem ao passar o mouse */
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.5); /* Adicionar sombra mais intensa */
+}
+
+/* Ajustes responsivos */
+@media (max-width: 768px) {
+  .fobras .static-image {
+    width: calc(50% - 5px); /* 2 imagens por linha em telas médias */
+  }
+}
+
+@media (max-width: 480px) {
+  .fobras .static-image {
+    width: calc(50% - 5px); /* 2 imagens por linha em telas menores */
   }
 }
 
@@ -377,57 +501,107 @@ section#home {
   }
 }
 
-section#obras {
+#contato {
   padding: 50px 0; /* Espaçamento vertical */
-  background-color: #000; /* Fundo escuro elegante */
-  color: #fff; /* Texto branco */
-  text-align: center; /* Centralizar texto */
+  background-color: #000000; /* Fundo escuro */
+  color: #fcfcfc; /* Cor do texto */
 }
 
-.fobras {
-  width: 100%; /* Garantir que o contêiner ocupe toda a largura */
-  margin: 0 auto; /* Centralizar o contêiner */
-  padding: 0; /* Remover padding */
-}
-
-.fobras .image-container {
+#contato .content {
   display: flex; /* Usar Flexbox */
-  justify-content: space-between; /* Espaçar imagens uniformemente */
-  padding: 0; /* Remover padding nas laterais */
-  box-sizing: border-box; /* Garantir que o padding não quebre o layout */
-  gap: 5px;
+  align-items: center; /* Alinhar itens verticalmente no centro */
+  justify-content: space-between; /* Espaçar itens uniformemente */
+  width: 80%; /* Garantir que o contêiner ocupe 80% da largura */
+  margin: 0 auto; /* Centralizar o contêiner */
 }
 
-.fobras .static-image {
-  width: calc(
-    50% - 5px
-  ); /* Garantir que a imagem ocupe 50% da largura com gap de 10px (dividido) */
-  height: auto; /* Manter a proporção da imagem */
-  object-fit: cover; /* Garantir que as imagens se ajustem corretamente */
-  margin-bottom: 10px; /* Espaço inferior entre as imagens */
+#contato .text {
+  flex: 1; /* Fazer o texto ocupar 1 unidade de espaço flexível */
+  display: flex; /* Usar Flexbox */
+  flex-direction: column; /* Direção da coluna */
+  justify-content: center; /* Centralizar verticalmente */
+  margin-right: 20px; /* Adicionar margem à direita para afastar do contêiner das imagens */
+}
+
+#contato .text h2 {
+  font-size: 2em; /* Tamanho da fonte do título */
+  margin-bottom: 20px; /* Espaço inferior do título */
+  text-align: left; /* Alinhar texto à esquerda */
+}
+
+#contato .text p {
+  font-size: 1.2em; /* Tamanho da fonte dos parágrafos */
+  margin-bottom: 10px; /* Espaço inferior dos parágrafos */
+  text-align: left; /* Alinhar texto à esquerda */
+}
+
+#contato .social-media {
+  display: flex; /* Usar Flexbox */
+  gap: 10px; /* Espaçamento entre ícones */
+  margin-left: 20px; /* Adicionar margem à esquerda para alinhamento */
+  align-items: center; /* Alinhar itens verticalmente no centro */
+}
+
+#contato .social-icon img {
+  width: 40px; /* Largura dos ícones */
+  height: 40px; /* Altura dos ícones */
+  transition: transform 0.3s ease; /* Transição suave ao passar o mouse */
+}
+
+#contato .social-icon img:hover {
+  transform: scale(1.1); /* Aumentar ícone ao passar o mouse */
+}
+
+#contato .image {
+  flex: 1; /* Fazer a imagem ocupar 1 unidade de espaço flexível */
+  text-align: center; /* Centralizar a imagem */
+}
+
+#contato .image img {
+  max-width: 50%; /* Garantir que a imagem ocupe 50% da largura */
   border-radius: 8px; /* Bordas arredondadas */
-  transition: transform 0.3s ease-in-out; /* Transição suave */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
 }
 
-/* Sombra e Transformação ao Hover */
-.fobras .static-image:hover {
-  transform: scale(
-    1.05
-  ); /* Aumentar levemente o tamanho da imagem ao passar o mouse */
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.5); /* Adicionar sombra mais intensa */
-}
-
-/* Ajustes responsivos */
+/* Media Queries para Responsividade */
 @media (max-width: 768px) {
-  .fobras .static-image {
-    width: calc(50% - 5px); /* 2 imagens por linha em telas médias */
+  #contato .content {
+    flex-direction: column; /* Empilhar os itens verticalmente */
+    align-items: center; /* Centralizar itens no eixo vertical */
+  }
+
+  #contato .text {
+    text-align: center; /* Centralizar texto em telas menores */
+  }
+
+  #contato .image {
+    margin-top: 20px; /* Adicionar margem superior à imagem */
   }
 }
 
-@media (max-width: 480px) {
-  .fobras .static-image {
-    width: calc(50% - 5px); /* 2 imagens por linha em telas menores */
-  }
+.whatsapp-float {
+  position: fixed; /* Fixo na tela */
+  bottom: 20px; /* Distância da borda inferior */
+  right: 20px; /* Distância da borda direita */
+  z-index: 100; /* Garantir que fique acima de outros elementos */
+  width: 60px; /* Largura do ícone */
+  height: 60px; /* Altura do ícone */
+  display: flex; /* Flexbox */
+  align-items: center; /* Alinhar itens verticalmente no centro */
+  justify-content: center; /* Centralizar itens horizontalmente */
+  background-color: #80b19288; /* Cor de fundo do WhatsApp */
+  border-radius: 50%; /* Forma circular */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); /* Sombra leve */
+  transition: transform 0.3s ease; /* Transição suave */
+}
+
+.whatsapp-float img {
+  width: 30px; /* Ajustar a largura do ícone */
+  height: 30px; /* Ajustar a altura do ícone */
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1); /* Aumentar o ícone ao passar o mouse */
 }
 
 /* Estilos do Rodapé */
@@ -435,33 +609,4 @@ footer {
   text-align: center;
   padding: 10px;
   background-color: #333;
-}
-
-/* Estilos responsivos para Menu Toggle e Nav */
-@media (max-width: 768px) {
-  .menu-toggle {
-    display: flex;
-    position: absolute;
-    top: 5px;
-    left: 20px;
-  }
-
-  .nav {
-    display: none;
-  }
-  .nav.active {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    top: 60px;
-    left: 0;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.9);
-  }
-  .nav ul {
-    flex-direction: column;
-  }
-  .nav ul li {
-    margin: 10px 0;
-  }
 }
