--- a/styles.css
+++ b/styles.css
@@ -501,6 +501,52 @@ section#obras {
   }
 }
 
+/* Estilos para a seção #informacoes */
+#informacoes {
+  padding: 50px 0; /* Espaçamento vertical */
+  background-color: #000; /* Fundo escuro diferenciado */
+  color: #fff; /* Cor do texto */
+  text-align: center; /* Centralizar texto */
+}
+
+#informacoes .container1-informacoes {
+  width: 80%; /* Garantir que o contêiner ocupe 80% da largura */
+  margin: 0 auto; /* Centralizar o contêiner */
+}
+
+#informacoes h2 {
+  font-size: 2.5em; /* Tamanho da fonte do título */
+  margin-bottom: 20px; /* Espaço inferior do título */
+}
+
+#informacoes p {
+  font-size: 1.2em; /* Tamanho da fonte do texto */
+  margin-bottom: 40px; /* Espaço inferior do texto */
+}
+
+#informacoes .cta-btn2-container {
+  display: flex; /* Usar Flexbox */
+  justify-content: center; /* Centralizar o botão */
+  margin-top: 20px; /* Adicionar margem superior para espaçamento */
+}
+
+#informacoes .cta-btn2 {
+  display: inline-block;
+  padding: 12px 30px;
+  background-color: #ffcc00;
+  color: #000; /* Cor do texto */
+  text-decoration: none;
+  border-radius: 8px;
+  font-weight: bold;
+  box-shadow: 0 4px 10px rgba(255, 204, 0, 0.4);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#informacoes .cta-btn2:hover {
+  transform: scale(1.1);
+  box-shadow: 0 6px 15px rgba(255, 204, 0, 0.6);
+}
+
 #contato {
   padding: 50px 0; /* Espaçamento vertical */
   background-color: #000000; /* Fundo escuro */
