--- a/styles.css
+++ b/styles.css
@@ -311,56 +311,65 @@ section#home {
 }
 
 section#obras {
-  padding: 50px 0; /* Espaçamento vertical */
+  padding: 30px 0; /* Reduzir o espaçamento vertical */
   background-color: #000; /* Fundo escuro elegante */
   color: #fff; /* Texto branco */
   text-align: center; /* Centralizar texto */
 }
 
 .fobras {
-  width: 100%; /* Garantir que o contêiner ocupe toda a largura */
+  width: 90%; /* Reduzir a largura do contêiner para 90% */
+  max-width: 1200px; /* Definir uma largura máxima */
   margin: 0 auto; /* Centralizar o contêiner */
   padding: 0; /* Remover padding */
 }
 
-.fobras .image-container {
-  display: flex; /* Usar Flexbox */
-  justify-content: space-between; /* Espaçar imagens uniformemente */
-  padding: 0; /* Remover padding nas laterais */
-  box-sizing: border-box; /* Garantir que o padding não quebre o layout */
-  gap: 5px;
+.image-container {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
 }
 
-.fobras .static-image {
-  width: calc(
-    50% - 5px
-  ); /* Garantir que a imagem ocupe 50% da largura com gap de 10px (dividido) */
+.carousel-images {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+  width: 100%; /* Garantir que o contêiner ocupe 100% da largura disponível */
+}
+
+.static-image {
+  flex: 0 0 100%; /* Garantir que cada imagem ocupe 100% do container */
   height: auto; /* Manter a proporção da imagem */
   object-fit: cover; /* Garantir que as imagens se ajustem corretamente */
-  margin-bottom: 10px; /* Espaço inferior entre as imagens */
   border-radius: 8px; /* Bordas arredondadas */
-  transition: transform 0.3s ease-in-out; /* Transição suave */
+  margin: 0 auto; /* Centralizar a imagem dentro do contêiner */
 }
 
-/* Sombra e Transformação ao Hover */
-.fobras .static-image:hover {
-  transform: scale(
-    1.05
-  ); /* Aumentar levemente o tamanho da imagem ao passar o mouse */
-  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.5); /* Adicionar sombra mais intensa */
+.prev-btn,
+.next-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  border: none;
+  padding: 10px;
+  cursor: pointer;
+  border-radius: 50%;
+  font-size: 18px;
+  z-index: 10; /* Garantir que os botões estejam acima das imagens */
 }
 
-/* Ajustes responsivos */
-@media (max-width: 768px) {
-  .fobras .static-image {
-    width: calc(50% - 5px); /* 2 imagens por linha em telas médias */
-  }
+.prev-btn {
+  left: 10px;
 }
 
-@media (max-width: 480px) {
-  .fobras .static-image {
-    width: calc(50% - 5px); /* 2 imagens por linha em telas menores */
-  }
+.next-btn {
+  right: 10px;
+}
+
+.prev-btn:hover,
+.next-btn:hover {
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 /* Estilo Geral */
